--- a/.github/workflows/amd64-release.yml
+++ b/.github/workflows/amd64-release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       docker_images:
-        description: 'gitlab/gitlab-ce'
+        description: '请填写docker镜像名称,多个用英文逗号分开'
         required: true
         default: 'alpine:latest,alpine/curl,busybox:stable-glibc'
 
